--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/app"
+    "start": "node ./bin/app.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
