--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "battleshipserver",
   "version": "0.0.0",
-  "private": true,
+  "main": "app.js",
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "debug": "~2.2.0",
