--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "app.js",
   "scripts": {
-    "web": "node app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "debug": "~2.2.0",
